<resources>
    <string name="app_name">AppController</string>
    <string name="tv_user_name">Fofana</string>
    <string name="tv_user_surname">Landry</string>
    <string name="tv_user_number">+225 09 00 00 00</string>
    <string name="btn_submit">VALIDER</string>
    <string name="tv_user_fonction">Ingenieur Informaticien</string>
    <string name="tv_event_price">$ 1000</string>
    <string name="tv_event_title">Afterwork ODA</string>
    <string name="tv_event_date">19 / 08 /2019</string>
    <string name="tv_event_place">Siège maison orange digital</string>
    <string name="tv_event_details_title">Titre de l\'évènement</string>
    <string name="tv_not_found">Code QR\nnon valide !</string>
    <string name="btn_submit_qr_notfound">VALIDER</string>
</resources>
