<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainEventDetailsActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25dp"
            android:text="@string/tv_event_details_title"/>

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/OrangeLight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_event_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@color/Orange"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/tv_event_title"/>

            <TextView
                android:id="@+id/tv_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/tv_event_date"/>

            <TextView
                android:id="@+id/tv_event_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/tv_event_place"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>