<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorwi"
    android:fillViewport="false"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorwi"
    tools:context=".MainScanResultActivity">

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/Orange"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:text=""/>
        <TextView
            android:id="@+id/tv_user_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="20dp"
            android:text=""/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_fonction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/tv_user_fonction"/>

    <TextView
        android:id="@+id/tv_user_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="20dp"
        android:text="@string/tv_user_number"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/Orange"
        android:textColor="@color/colorwi"
        android:text="@string/btn_submit"/>


</LinearLayout>
</ScrollView>